<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameText"
        android:textSize="19sp"
        />

    <EditText
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeName"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/weatherButton"
        android:nextFocusDown="@id/email"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="19sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/item1"
        android:nextFocusDown="@id/imageBtn"
        />

    <TextView
        android:id="@+id/item6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pictureText"
        android:textSize="19sp"
        android:nextFocusUp="@id/email"
        android:nextFocusDown="@id/imageBtn"
        />

    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusUp="@id/email"
        android:nextFocusDown="@id/chatButton"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pictureInfo"
        android:textSize="19sp"
        />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterChat"
        android:nextFocusUp="@id/imageBtn"
        android:nextFocusDown="@id/weatherButton"
        />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterWeather"
        android:nextFocusUp="@id/chatButton"
        android:nextFocusDown="@id/item1"
        />

</LinearLayout>