<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/messageHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageHere"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/idEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_below="@+id/messageHere"
        android:textSize="20dp"/>

    <CheckBox
        android:id="@+id/isSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendMessage"
        android:layout_below="@+id/idEquals"/>

    <Button
        android:id="@+id/hideBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>