<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/gridLayout"
    android:rowCount="4"
    android:columnCount="2"
    >

    <TextView
        android:layout_width="411sp"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"

        />

    <Button
        android:id="@+id/Button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxText"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SwitchText"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hiddenText"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:layout_columnSpan="2"
        />

</GridLayout>