<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        />

    <Button
        android:id="@+id/Button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_below="@+id/textView"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxText"
        android:layout_toEndOf="@+id/Button"
        android:layout_below="@+id/textView"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_below="@+id/Button"
        />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SwitchText"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_below="@+id/checkBox"
        android:layout_above="@+id/editText"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hiddenText"
        android:inputType="textPersonName"
        android:layout_below="@+id/imageButton"
        />

</RelativeLayout>